# soccer-data

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
cli/: __main__.py
cli/commands/: ecnl.py  ga.py  mls.py  ncaa.py  nwsl.py  sw.py  tds.py  us.py  usys.py
cli/common/: config.py  cosmos.py  tools.py
cli/data/: club_translations.json  ga_clubs.json  github_data.lst
dexter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
org/: club_translations.json  conference_translations.json
org/college/: organizations.json
org/college/ncaa/divisions/: index.json
org/college/ncaa/divisions/d1/: conferences.json
org/college/ncaa/divisions/d2/: conferences.json
org/college/ncaa/divisions/d3/: conferences.json
org/college/njcaa/: conferences.json
org/countries/: index.json
org/countries/us/: cities.json
org/ecnl/: clubs.json  conferences.json
org/ga/: clubs.json  conferences.json
org/pro/nwsl/: meta.json  meta2.json
org/tds/: division_mapping.json  position_mapping.json  region_mapping.json  state_mapping.json
org/tds/college/ncaa/d1/conferences/: female.json
org/usys/: nlpro_teams.json
org/usys/elite64/: clubs.json
org/usys/national_league/: conferences.json
org/usys/regions/east/: connecticut.json
scripts/: data.py  extract_elite64_info.py  extract_nl_info.py  extract_usys_nl_pro_teams.py  index_ecnl_clubs.py  index_ecnl_conferences.py  index_ga_clubs.py  index_ga_conferences.py  mine.py  normalize_conferences.py  normalize_divisions.py  normalize_njcaa_conferences.py  normalize_nwsl_meta.py  normalize_organizations.py  parse.py  validate.py
