[metadata]
name = dexter
version = file: version.txt
author = Omar Crosby
author_email = omar.crosby@gmail.com
url = https://github.com/ocrosby/soccer-data
description = {description}
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = dexter soccer soccerhub data
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/ocrosby/soccer-data/issues
    Changelog = https://github.com/ocrosby/soccer-data/blob/master/CHANGELOG.md


[options]
zip_safe = False
package_dir =
    =.

packages = find:
include_package_data = True

python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*

test_suite = tests

setup_requires =
    setuptools

install_requires = 
    click
    click_log
    click_spinner
    bs4
    requests
    wheel
    python-dotenv
    jsonschema
    azure-cosmos
    tweepy
    typing-extensions

tests_require =
    pytest
    pytest-cov
    coverage
    flake8

[options.extras_require]
dev = 
    pytest
    pytest-cov
    flake8

[options.entry_points]
console_scripts =
    dexter = cli.__main__:cli

[options.package_data]
{name} = py.typed, _version.txt, *.pyi

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions
    
[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true